--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <nav class="main-navigation">
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=WbozDBM67lY" target="_blank"><span class="fas fa-home"></span></a></li>
+                <li><a href="https://www.youtube.com/watch?v=DZfzJATDmXs" target="_blank"><span class="fas fa-home"></span></a></li>
             </ul>
         </nav>
     </header>
